# QtWaitingSpinner

./: CMakeLists.txt
